fix role issue
