# docs/swagger.json
@@ -74,8 +74,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "location",
-                        "name": "location",
+                        "description": "location base64",
+                        "name": "location_base64",
                         "in": "path",
                         "required": true
                     }
@@ -108,7 +108,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Absen ID",
+                        "description": "ID Absen",
                         "name": "id_absen",
                         "in": "path",
                         "required": true
@@ -124,14 +124,14 @@
                 }
             }
         },
-        "/api/absen/get/{id_user}": {
+        "/api/absen/get/{id_absen}": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "get Absen by ID User.",
+                "description": "get Absen by ID Absen with scope of that user.",
                 "produces": [
                     "application/json"
                 ],
@@ -142,8 +142,8 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID User",
-                        "name": "id_user",
+                        "description": "ID Absen",
+                        "name": "id_absen",
                         "in": "path",
                         "required": true
                     }
@@ -185,7 +185,7 @@
                     },
                     {
                         "type": "integer",
-                        "description": "Absen ID",
+                        "description": "ID Absen",
                         "name": "id_absen",
                         "in": "path",
                         "required": true
@@ -314,7 +314,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ELogBook ID",
+                        "description": "ID ELogBook",
                         "name": "id_elogbook",
                         "in": "path",
                         "required": true
@@ -330,7 +330,7 @@
                 }
             }
         },
-        "/api/elogbook/get/{id_user}": {
+        "/api/elogbook/get/{id_elogbook}": {
             "get": {
                 "security": [
                     {
@@ -348,8 +348,8 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID User",
-                        "name": "id_user",
+                        "description": "ID Elogbook",
+                        "name": "id_elogbook",
                         "in": "path",
                         "required": true
                     }
@@ -541,6 +541,11 @@
         },
         "/api/qr/get/{id_lokasi}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get qr codes based on id_lokasi.",
                 "consumes": [
                     "*/*"
@@ -549,6 +554,15 @@
                     "Misc"
                 ],
                 "summary": "qr code image.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID Lokasi",
+                        "name": "id_lokasi",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -715,7 +729,7 @@
                     },
                     {
                         "type": "integer",
-                        "description": "ELogBook ID",
+                        "description": "ID ELogBook",
                         "name": "id_elogbook",
                         "in": "path",
                         "required": true
